styled the instructions differently

--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,14 @@ h4 {
 p {
 	font-weight: bold;
 	display: inline-block;
-	font-size: 20px;
+	font-size: 18px;
 	width: 60%;
 	color: #fff;
 	text-shadow: 2px 3px 3px #000;
+}
+span {
+	text-decoration: underline;
+	text-shadow: none;
 }
 .header {
 	width: 100%;
